# Rust_Proxy_Contract

./: CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
contracts/ownership/: Cargo.toml
contracts/ownership/src/: contract.rs  integration_tests.rs  lib.rs  msg.rs
